# burn-embed

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
scripts/: check.sh
src/: lib.rs  minilm.rs
